# asteroids

./: CMakeLists.txt  README.md  backup.cpp  vcpkg-configuration.json
resources/shaders/asteroids/: geometryShader.geom
resources/shaders/characters/: fragmentShader.frag  vertexShader.vert
resources/shaders/particles/: fragmentShader.frag
resources/shaders/player/: fragmentShader.frag  vertexShader.vert
resources/shaders/postProcessing/pass1/: fragmentShader.frag  vertexShader.vert
resources/shaders/postProcessing/pass2/: fragmentShader.frag  noPost.frag  vertexShader.vert
source/: main.cpp
